added the second section

--- a/scss/partials/_ecommerce.scss
+++ b/scss/partials/_ecommerce.scss
@@ -64,7 +64,7 @@ $ecc-one-bg: #141518;
 }
 
 .new-badge {
-    background: url(../img/purple-badge.png) no-repeat;
+    background: url(../../img/purple-badge.png) no-repeat;
     width: 61px;
     height: 61px;
     position: absolute;
