--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
       color: #989898; }
 
 .new-badge {
-  background: url(../img/purple-badge.png) no-repeat;
+  background: url(../../img/purple-badge.png) no-repeat;
   width: 61px;
   height: 61px;
   position: absolute;
